--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,5 +22,7 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: "About My Father's Business\r\nWork Amidst the Sick, the Sad, and the Sorrowing"
 url: http://www.gutenberg.org/ebooks/50973
